--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,7 @@
     <!-- Footer -->
     <br><br>
     <div class="footer  text-center navbar-fixed-bottom">
-			<li>© 2015 <span title="南邮 ctf">xiaoxiaoleo</span>, Inc.</li>
+			<li>© 2015 <span title="南邮 ctf">小绿草安全小组</span>, Inc.</li>
 			<br>
 			<br>
     </div>
